--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health ID</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="background-color: #E4E4E4">
+    <div id="root">
+    </div>
   </body>
 </html>
